tests/auto/corelib/thread/qfuture/tst_qfuture.cpp
@@ -228,6 +228,8 @@ private slots:
 
     void createReadyFutures();
     void continuationsDontLeak();
+    void cancelAfterFinishWithContinuations();
+
 private:
     using size_type = std::vector<int>::size_type;
 
@@ -4109,6 +4111,31 @@ void tst_QFuture::continuationsDontLeak()
         QVERIFY(continuationIsRun);
     }
     QCOMPARE(InstanceCounter::count, 0);
+}
+
+// This test checks that we do not get use-after-free
+void tst_QFuture::cancelAfterFinishWithContinuations()
+{
+    QFuture<void> future;
+    bool continuationIsRun = false;
+    bool cancelCalled = false;
+    {
+        QPromise<void> promise;
+        future = promise.future();
+
+        future.then([&continuationIsRun]() {
+            continuationIsRun = true;
+        }).onCanceled([&cancelCalled]() {
+            cancelCalled = true;
+        });
+
+        promise.start();
+        promise.finish();
+    }
+
+    QVERIFY(continuationIsRun);
+    future.cancel();
+    QVERIFY(!cancelCalled);
 }
 
 QTEST_MAIN(tst_QFuture)
